# husky

./: AI_USAGE.md  NEXT_STEPS.md  README.md  TASKS.md  legacy_results.csv  main.py  pyproject.toml
tests/: test_legacy_bug.py
water_model/: utils.py  water_model.py
