[project]
name = "hydrologysimulator"
version = "0.1.0"
description = "Small legacy hydrology/water-quality script to simulate water flow through a reach"
authors = [
    {name = "Rommy",email = "rommygobardhanv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
